# mc-anomaly-detector

./: .gitignore  Dockerfile  README.md  docker-compose-influxdb.yml  docker-compose.yml  pyproject.toml
comm/: detector.py  log_file_reader.py
dags/: anomaly_detector_dag.py
dags/collector/: log_file_reader.py  main.py
dags/config/: llm_configuration.py  logger_configuration.py
detector/: detector.py
mod/: detector.py  env_loader.py  log_file_reader.py  pg_client.py  service.py  ts_influx_client.py
resource/: prerequisite.sql
resource/pattern/: log_pattern.json
