[tool.poetry]
name = "mc-anomaly-detector"
version = "0.0.1"
description = "Unified data collector"
authors = ["mk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
python-dotenv = "^1.0.1"
apache-airflow = "2.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"